Update index.html, .css and Add demo2 - TitleTopContent

--- a/template/index.html
+++ b/template/index.html
@@ -32,7 +32,18 @@
 
             </div>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <div class="container">
+                <a href="">Home </a> /
+                <a href="">Category </a> /
+                <a href="" class="active">Product title</a>
+                <h2 style="font-size: 50px;line-height: 2px; margin: 40px 0;">Product title</h2>
+                <div style="display: flex; align-items: center;">
+                    <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span style="color: grey;">(99 reviews) </span>
+                </div>
+
+            </div>
+        </div>
         <div class="footer"></div>
     </div>
 </body>
