--- a/static/index.css
+++ b/static/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Verdana, sans-serif;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 1.5;
 }
 
@@ -15,12 +15,15 @@ body {
     grid-area: "header";
     display: flex;
     justify-content: space-between;
-    padding: 20px;
     border-bottom: 1px solid black;
+    padding: 10px;
 }
 
 .content {
     grid-area: "content";
+    padding: 30px 135px;
+    height: 1000px;
+    background-color: aqua;
 }
 
 .footer {
@@ -31,7 +34,6 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
 }
 
 .header .left a {
@@ -56,4 +58,20 @@ body {
 
 .header .right img {
     margin: 5px;
+}
+
+.container {
+    height: 100%;
+    padding: 5px;
+}
+
+.container a {
+    text-decoration: none;
+    color: grey;
+    font-size: 14px;
+}
+
+.container a.active {
+    color: black;
+    font-weight: 600;
 }
