--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
     <div class="grid-container">
         <div class="header">
             <div class="left">
-                <img src="../images/logo1.png" style="width:100px; margin: 0 20px" alt="Logo">
+                <img src="../images/logo.png" style="width:100px; margin: 0 20px" alt="Logo">
                 <a href="" class="active">Home</a>
                 <a href="">Promotions</a>
                 <a href="">Best-sellers</a>
@@ -37,9 +37,24 @@
                 <a href="">Home </a> /
                 <a href="">Category </a> /
                 <a href="" class="active">Product title</a>
-                <h2 style="font-size: 50px;line-height: 2px; margin: 40px 0;">Product title</h2>
-                <div style="display: flex; align-items: center;">
-                    <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span style="color: grey;">(99 reviews) </span>
+                <h2 style="font-size: 50px;line-height: 2px; margin: 40px 0; letter-spacing: -0.5px;">Product title</h2>
+
+                <div style="display: flex; justify-content: space-between;">
+                    <div style="display: flex; align-items: center;">
+                        <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span style="color: grey;">(99 reviews) </span>
+                    </div>
+                    <div style="display: flex; align-items: center; justify-content: space-between; width: 150px;">
+                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px" alt="" style="margin-right: 6px;"> Share</div>
+                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px" alt="" style="margin-right: 6px;"> Save</div>
+                    </div>
+                </div>
+
+                <div class="grid-image">
+                    <div class="img1"><img src="../images/img1.png" alt=""></div>
+                    <div class="img2"><img src="../images/img2.png" alt=""></div>
+                    <div class="img3"><img src="../images/img3.png" alt=""></div>
+                    <div class="img4"><img src="../images/img4.png" alt=""></div>
+                    <div class="img5"><img src="../images/img5.png" alt=""></div>
                 </div>
 
             </div>
