--- a/template/index.html
+++ b/template/index.html
@@ -41,11 +41,14 @@
 
                 <div style="display: flex; justify-content: space-between;">
                     <div style="display: flex; align-items: center;">
-                        <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span style="color: grey;">(99 reviews) </span>
+                        <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span
+                            style="color: grey;">(99 reviews) </span>
                     </div>
                     <div style="display: flex; align-items: center; justify-content: space-between; width: 150px;">
-                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px" alt="" style="margin-right: 6px;"> Share</div>
-                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px" alt="" style="margin-right: 6px;"> Save</div>
+                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
+                                alt="" style="margin-right: 6px;"> Share</div>
+                        <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
+                                alt="" style="margin-right: 6px;"> Save</div>
                     </div>
                 </div>
 
@@ -56,7 +59,38 @@
                     <div class="img4"><img src="../images/img4.png" alt=""></div>
                     <div class="img5"><img src="../images/img5.png" alt=""></div>
                 </div>
+                <div class="flex-container">
+                    <div class="left">
+                        <h2>Product description</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi reiciendis ipsam
+                            recusandae tenetur qui, velit, ducimus consequuntur temporibus doloribus officiis accusamus,
+                            vero ex. Debitis illo sed molestiae est consequuntur
+                            dolorum.
+                            <br>
+                            Convallis in semper laoreet nibh leo. Vivamus malesuada ipsum pulvinar non rutrum risus dui,
+                            risus. Purus massa velit
+                            iaculis tincidunt tortor, risus, scelerisque risus. In at lorem pellentesque orci aenean
+                            dictum dignissim in. Aenean
+                            pulvinar diam interdum ullamcorper. Vel urna, tortor, massa metus purus metus. Maecenas
+                            mollis in velit auctor cursus
+                            scelerisque eget.
+                        </p>
+                        <div class="grid-icon">
+                            <div class="icon1"><img src="../images/Truck 1.png" alt=""><p>Free delivery</p></div>
+                            <div class="icon2"><img src="../images/Arrow bend up left 1.png" alt=""><p>7 days return</p></div>
+                            <div class="icon3"><img src="../images/Globe 1.png" alt=""><p>Made in USA</p></div>
+                            <div class="icon4"><img src="../images/Medal 1.png" alt=""><p>2 years quanrantee</p></div>
+                            <div class="icon5"><img src="../images/Chat dots 1.png" alt=""><p>100% authentic</p></div>
+                            <div class="icon6"><img src="../images/Checks 1.png" alt=""><p>24/7 customer support</p></div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h1 style="text-align: right; margin-top:0;">$99</h1>
+                    </div>
 
+
+                </div>
+                <hr color="grey">
             </div>
         </div>
         <div class="footer"></div>
