--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/index.css">
-    <title>BTTH 5</title>
+    <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>    <title>BTTH 5</title>
 </head>
 
 <body>
@@ -85,7 +85,13 @@
                         </div>
                     </div>
                     <div class="right">
-                        <h1 style="text-align: right; margin-top:0;">$99</h1>
+                        <h1 style="text-align: right; margin-top:0; color: rgb(22, 187, 187);">$99</h1>
+                        <div class="drop"><span>Color</span> <i class="fa-solid fa-caret-down"></i></div>
+                        <div class="drop"><span>Size</span> <i class="fa-solid fa-caret-down"></i></div>
+                        <div class="drop"><span>3</span> <i class="fa-solid fa-caret-down"></i></div>
+                        <div style="display: flex; justify-content: space-between; align-items: center;"><p style="opacity: 0.5">Total</p> <h4>$265</h4></div>
+                        <div class="btn">Buy now</div>
+                        <div class="add-cart"><i class="fa-solid fa-cart-shopping" style="margin-right:10px"></i>Add to cart</div>
                     </div>
 
 
