Update index.html, .css, add demo6 - modified menu

--- a/template/index.html
+++ b/template/index.html
@@ -13,18 +13,19 @@
     <div class="grid-container">
         <div class="header">
             <div class="left">
-                <img src="../images/logo.png" style="width:100px; margin: 0 20px" alt="Logo">
+                <img src="../images/logo.png" style="width:95px; margin: 0 35px" alt="Logo">
                 <a href="" class="active">Home</a>
                 <a href="">Promotions</a>
                 <a href="">Best-sellers</a>
-                <a href="">No-releases</a>
+                <a href="">New releases</a>
                 <a href="">Support</a>
             </div>
             <div class="right">
-                <div>
-                    <input type="text" placeholder="Search..." style="border: none; font-size: 15px;">
+                <div style="position: relative;">
+                    <i class="fa fa-search" style="opacity: 0.5; position: absolute; left: 10px; top:10px"></i>
+                    <input type="text" placeholder="Search..." style="border: none; font-size: 15px; background-color: rgb(245, 245, 245); width: 300px; height:15px; padding: 10px 0 10px 30px; border-radius: 5px;">
                 </div>
-                <div>
+                <div style="display: flex; align-items: center;">
                     <img src="../images/Bell 1.png" alt="bell">
                     <img src="../images/Shopping cart simple 1.png" alt="cart">
                     <img src="../images/Avatar 758.png" alt="">
@@ -44,11 +45,12 @@
                         <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span
                             style="color: grey;">(99 reviews) </span>
                     </div>
-                    <div style="display: flex; align-items: center; justify-content: space-between; width: 150px;">
+                    <div style="display: flex; align-items: center; justify-content: space-between; width: 150px; padding: 0 20px;">
+                        
                         <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
-                                alt="" style="margin-right: 6px;"> Share</div>
+                                alt="" style="margin-right: 10px;"> Share</div>
                         <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
-                                alt="" style="margin-right: 6px;"> Save</div>
+                                alt="" style="margin-right: 10px;"> Save</div>
                     </div>
                 </div>
 
@@ -96,7 +98,20 @@
 
 
                 </div>
-                <hr color="grey">
+                <hr style="margin: 30px 0; opacity: 0.5;">
+                <div style="display: flex; align-items: center;">
+                    <h2>Reviews</h2>
+                    <img src="../images/Rating 304.png" width="20px" alt="" align="center" style="margin: 0 5px 0 8px;"> <b>4.20 </b> <span
+                        style="color: grey;"> (99 reviews) </span>
+                </div>
+                
+                <div class="user">
+                    <div>
+                        <img src="../images/Avatar 753.png" alt="" align="center">
+                        <h5>Jay Rutherford</h5>
+                    </div>
+
+                </div>
             </div>
         </div>
         <div class="footer"></div>
