--- a/static/index.css
+++ b/static/index.css
@@ -8,7 +8,7 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-rows: 80px auto auto;
+    grid-template-rows: 65px auto auto;
     grid-template-areas: "header" "content" "footer";
 }
 
@@ -16,8 +16,7 @@ body {
     grid-area: "header";
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid black;
-    padding: 10px;
+    border-bottom: 1px solid rgba(243, 243, 243, 0.9);
 }
 
 .content {
@@ -37,16 +36,19 @@ body {
 }
 
 .header .left a {
+    display: inline-block;
+    padding: 30px 10px;
     text-decoration: none;
-    margin-right: 15px;
     color: grey;
     font-size: 14px;
+    line-height: 0;
     letter-spacing: 0;
 }
 
 .left a.active {
     font-weight: 800;
-    color: aqua;
+    color: rgb(17, 199, 199);
+    border-bottom: 5px solid rgb(17, 199, 199);
 }
 
 .header .right {
@@ -57,7 +59,7 @@ body {
 }
 
 .header .right img {
-    margin: 5px;
+    margin: 10px;
 }
 
 .container {
