Update index.html, .css, add demo7 - users' reviews

--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/index.css">
-    <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>    <title>BTTH 5</title>
+    <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
+    <title>BTTH 5</title>
 </head>
 
 <body>
@@ -23,7 +24,8 @@
             <div class="right">
                 <div style="position: relative;">
                     <i class="fa fa-search" style="opacity: 0.5; position: absolute; left: 10px; top:10px"></i>
-                    <input type="text" placeholder="Search..." style="border: none; font-size: 15px; background-color: rgb(245, 245, 245); width: 300px; height:15px; padding: 10px 0 10px 30px; border-radius: 5px;">
+                    <input type="text" placeholder="Search..."
+                        style="border: none; font-size: 15px; background-color: rgb(245, 245, 245); width: 300px; height:15px; padding: 10px 0 10px 30px; border-radius: 5px;">
                 </div>
                 <div style="display: flex; align-items: center;">
                     <img src="../images/Bell 1.png" alt="bell">
@@ -45,8 +47,9 @@
                         <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span
                             style="color: grey;">(99 reviews) </span>
                     </div>
-                    <div style="display: flex; align-items: center; justify-content: space-between; width: 150px; padding: 0 20px;">
-                        
+                    <div
+                        style="display: flex; align-items: center; justify-content: space-between; width: 150px; padding: 0 20px;">
+
                         <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
                                 alt="" style="margin-right: 10px;"> Share</div>
                         <div style="display: flex; align-items: center;"><img src="../images/Heart 23.png" width="16px"
@@ -78,12 +81,24 @@
                             scelerisque eget.
                         </p>
                         <div class="grid-icon">
-                            <div class="icon1"><img src="../images/Truck 1.png" alt=""><p>Free delivery</p></div>
-                            <div class="icon2"><img src="../images/Arrow bend up left 1.png" alt=""><p>7 days return</p></div>
-                            <div class="icon3"><img src="../images/Globe 1.png" alt=""><p>Made in USA</p></div>
-                            <div class="icon4"><img src="../images/Medal 1.png" alt=""><p>2 years quanrantee</p></div>
-                            <div class="icon5"><img src="../images/Chat dots 1.png" alt=""><p>100% authentic</p></div>
-                            <div class="icon6"><img src="../images/Checks 1.png" alt=""><p>24/7 customer support</p></div>
+                            <div class="icon1"><img src="../images/Truck 1.png" alt="">
+                                <p>Free delivery</p>
+                            </div>
+                            <div class="icon2"><img src="../images/Arrow bend up left 1.png" alt="">
+                                <p>7 days return</p>
+                            </div>
+                            <div class="icon3"><img src="../images/Globe 1.png" alt="">
+                                <p>Made in USA</p>
+                            </div>
+                            <div class="icon4"><img src="../images/Medal 1.png" alt="">
+                                <p>2 years quanrantee</p>
+                            </div>
+                            <div class="icon5"><img src="../images/Chat dots 1.png" alt="">
+                                <p>100% authentic</p>
+                            </div>
+                            <div class="icon6"><img src="../images/Checks 1.png" alt="">
+                                <p>24/7 customer support</p>
+                            </div>
                         </div>
                     </div>
                     <div class="right">
@@ -91,26 +106,99 @@
                         <div class="drop"><span>Color</span> <i class="fa-solid fa-caret-down"></i></div>
                         <div class="drop"><span>Size</span> <i class="fa-solid fa-caret-down"></i></div>
                         <div class="drop"><span>3</span> <i class="fa-solid fa-caret-down"></i></div>
-                        <div style="display: flex; justify-content: space-between; align-items: center;"><p style="opacity: 0.5">Total</p> <h4>$265</h4></div>
+                        <div style="display: flex; justify-content: space-between; align-items: center;">
+                            <p style="opacity: 0.5">Total</p>
+                            <h4>$265</h4>
+                        </div>
                         <div class="btn">Buy now</div>
-                        <div class="add-cart"><i class="fa-solid fa-cart-shopping" style="margin-right:10px"></i>Add to cart</div>
+                        <div class="add-cart"><i class="fa-solid fa-cart-shopping" style="margin-right:10px"></i>Add to
+                            cart</div>
                     </div>
 
 
                 </div>
                 <hr style="margin: 30px 0; opacity: 0.5;">
-                <div style="display: flex; align-items: center;">
-                    <h2>Reviews</h2>
-                    <img src="../images/Rating 304.png" width="20px" alt="" align="center" style="margin: 0 5px 0 8px;"> <b>4.20 </b> <span
-                        style="color: grey;"> (99 reviews) </span>
-                </div>
-                
-                <div class="user">
-                    <div>
-                        <img src="../images/Avatar 753.png" alt="" align="center">
-                        <h5>Jay Rutherford</h5>
+                <div style="display: flex; justify-content: space-between;">
+                    <div style="display: flex; align-items: center;">
+                        <h2>Reviews</h2>
+                        <img src="../images/Rating 304.png" width="20px" alt="" align="center"
+                            style="margin: 0 5px 0 8px;">
+                        <b>4.20 </b> <span style="color: grey;"> (99 reviews) </span>
                     </div>
+                    <div style="display: flex; align-items: center;opacity: 0.4;">
+                        <span>Show all reviews</span>
+                        <i class="fas fa-greater-than" style="margin: 0 10px;"></i>
+                    </div>
+                </div>
 
+
+                <div class="user-cmts">
+                    <div class="user">
+                        <div class="avt"><img src="../images/Avatar 753.png" alt=""></div>
+                        <div class="name-rate">
+                            <h5 style="margin:5px 0">Jay Rutherford <span
+                                    style="font-size: 12px; opacity: 0.3; font-weight: 500; margin-left: 5px;">3d
+                                    ago</span></h5>
+                            <img src="../images/Rating 301.png" alt="">
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
+                        consequatur!Accusamus, voluptate consequatur!</p>
+                </div>
+                <div class="user-cmts">
+                    <div class="user">
+                        <div class="avt"><img src="../images/Avatar 756.png" alt=""></div>
+                        <div class="name-rate">
+                            <h5 style="margin:5px 0">Nicole Chung <span
+                                    style="font-size: 12px; opacity: 0.3; font-weight: 500; margin-left: 5px;">3d
+                                    ago</span></h5>
+                            <img src="../images/Rating 318.png" alt="">
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
+                        consequatur!Accusamus, voluptate consequatur!</p>
+                </div>
+                <div class="user-cmts">
+                    <div class="user">
+                        <div class="avt"><img src="../images/Avatar 755.png" alt=""></div>
+                        <div class="name-rate">
+                            <h5 style="margin:5px 0">Wei Arnorld <span
+                                    style="font-size: 12px; opacity: 0.3; font-weight: 500; margin-left: 5px;">3d
+                                    ago</span></h5>
+                            <img src="../images/Rating 317.png" alt="">
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
+                        consequatur!Accusamus, voluptate consequatur!</p>
+                </div>
+                <div class="user-cmts">
+                    <div class="user">
+                        <div class="avt"><img src="../images/Avatar 757.png" alt=""></div>
+                        <div class="name-rate">
+                            <h5 style="margin:5px 0">Judith Mejia<span
+                                    style="font-size: 12px; opacity: 0.3; font-weight: 500; margin-left: 5px;">3d
+                                    ago</span></h5>
+                            <img src="../images/Rating 299.png" alt="">
+                        </div>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
+                        consequatur!Accusamus, voluptate consequatur!</p>
+                </div>
+
+                <hr style="margin: 30px 0; opacity: 0.5;">
+                <div style="display: flex; justify-content: space-between; ">
+                    <div style="display: flex; align-items: center;">
+                        <h2>Related products</h2>
+                    </div>
+                    <div style="display: flex; align-items: center; opacity: 0.4;">
+                        <span>See more</span>
+                        <i class="fas fa-greater-than" style="margin: 0 10px;"></i>
+                    </div>
+                </div>
+                <div class="flex-cart">
+                    <div class="cart">
+                        
+                    </div>
                 </div>
             </div>
         </div>
