--- a/static/index.css
+++ b/static/index.css
@@ -168,3 +168,19 @@ body {
     margin: 15px 0 10px 0;
     padding: 10px;
 }
+.user-cmts{
+    display: inline-block;
+    width: 45%;
+    margin: 10px 20px 10px 0;
+}
+.user-cmts p{
+    font-size: 13px;
+}
+.user{
+    display: flex;
+    align-items: center;
+}
+
+.user .avt{
+    margin-right: 10px;
+}
