--- a/static/index.css
+++ b/static/index.css
@@ -184,3 +184,17 @@ body {
 .user .avt{
     margin-right: 10px;
 }
+
+.flex-card{
+    display: flex;
+    justify-content: space-between;
+}
+.flex-card .card{
+    width: 23%;
+    border: 1px solid rgb(244, 242, 242);
+    border-radius: 5px;
+    overflow: hidden;
+}
+.card h3, h4, h5{
+    margin: 0;
+} 
