--- a/template/index.html
+++ b/template/index.html
@@ -195,9 +195,62 @@
                         <i class="fas fa-greater-than" style="margin: 0 10px;"></i>
                     </div>
                 </div>
-                <div class="flex-cart">
-                    <div class="cart">
-                        
+                <div class="flex-card">
+                    <div class="card">
+                        <img src="../images/Image 1704.png" alt="">
+                        <div style="margin: 10px 15px;">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <h3>Product title</h3>
+                                <img src="../images/Heart 23.png" style="width: 25px;height: 25px;" alt="">
+                            </div>
+                            <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../images/Image 1703.png" alt="">
+                        <div style="margin: 10px 15px;">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <h3>Product title</h3>
+                                <img src="../images/Heart 23.png" style="width: 25px;height: 25px;" alt="">
+                            </div>
+                            <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../images/Image 1711.png" alt="">
+                        <div style="margin: 10px 15px;">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <h3>Product title</h3>
+                                <img src="../images/Heart 23.png" style="width: 25px;height: 25px;" alt="">
+                            </div>
+                            <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="../images/Image 1712.png" alt="">
+                        <div style="margin: 10px 15px;">
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <h3>Product title</h3>
+                                <img src="../images/Heart 23.png" style="width: 25px;height: 25px;" alt="">
+                            </div>
+                            <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
