--- a/template/index.html
+++ b/template/index.html
@@ -41,7 +41,6 @@
                 <a href="">Category </a> /
                 <a href="" class="active">Product title</a>
                 <h2 style="font-size: 50px;line-height: 2px; margin: 40px 0; letter-spacing: -0.5px;">Product title</h2>
-
                 <div style="display: flex; justify-content: space-between;">
                     <div style="display: flex; align-items: center;">
                         <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span
@@ -117,7 +116,7 @@
 
 
                 </div>
-                <hr style="margin: 30px 0; opacity: 0.5;">
+                <hr style="margin: 30px 0; opacity: 0.2;">
                 <div style="display: flex; justify-content: space-between;">
                     <div style="display: flex; align-items: center;">
                         <h2>Reviews</h2>
@@ -185,7 +184,7 @@
                         consequatur!Accusamus, voluptate consequatur!</p>
                 </div>
 
-                <hr style="margin: 30px 0; opacity: 0.5;">
+                <hr style="margin: 30px 0; opacity: 0.2;">
                 <div style="display: flex; justify-content: space-between; ">
                     <div style="display: flex; align-items: center;">
                         <h2>Related products</h2>
@@ -255,7 +254,53 @@
                 </div>
             </div>
         </div>
-        <div class="footer"></div>
+
+        <div class="footer">
+            <img src="../images/logo.png" alt="Logo">
+            <h2>Subscribe to our newletter</h2>
+            <div class="email"></div>
+            <div class="info">
+                <div>
+                    <h3>Product</h3>
+                    <p>Features</p>
+                    <p>Pricing</p>
+                </div>
+                <div>
+                    <h3>Resources</h3>
+                    <p>Blog</p>
+                    <p>User guides</p>
+                    <p>Webinars</p>
+                </div>
+                <div>
+                    <h3>Company</h3>
+                    <p>About us</p>
+                    <p>Contact us</p>
+                </div>
+                <div>
+                    <h3>Plan & Pricing</h3>
+                    <p>Personal</p>
+                    <p>Start up</p>
+                    <p>Oganization</p>
+                </div>
+            </div>
+            <div class="language">
+                <p>English</p>
+                <i class="fas fa-sort-down" style="line-height: 1.5;"></i>
+            </div>
+            <div class="coppyright">
+                <i class="fa fa-copyright" aria-hidden="true"></i>
+                2022 Brand, Inc <i class="fas fa-circle " style="font-size: 5px;"></i>
+                Privacy <i class="fas fa-circle " style="font-size: 5px;"></i> Terms
+                <i class="fas fa-circle " style="font-size: 5px;"></i> Sitemap
+            </div>
+            <div class="social">
+                <img src="../images/Twitter 9.png" alt="twitter">
+                <img src="../images/Facebook 9.png" alt="facebook">
+                <img src="../images/LinkedIn 8.png" alt="linkin">
+                <img src="../images/YouTube 8.png" alt="youtube">
+
+            </div>
+        </div>
     </div>
 </body>
 
