--- a/template/index.html
+++ b/template/index.html
@@ -44,7 +44,7 @@
                 <div style="display: flex; justify-content: space-between;">
                     <div style="display: flex; align-items: center;">
                         <img src="../images/Rating 303.png" width="100px" alt="" align="center"> <b>4.20</b> <span
-                            style="color: grey;">(99 reviews) </span>
+                            style="color: grey; margin-left: 1px; opacity: 0.7;"> {99 reviews} </span>
                     </div>
                     <div
                         style="display: flex; align-items: center; justify-content: space-between; width: 150px; padding: 0 20px;">
@@ -122,7 +122,7 @@
                         <h2>Reviews</h2>
                         <img src="../images/Rating 304.png" width="20px" alt="" align="center"
                             style="margin: 0 5px 0 8px;">
-                        <b>4.20 </b> <span style="color: grey;"> (99 reviews) </span>
+                        <b>4.20 </b> <span style="color: grey; margin-left: 5px;"> (99 reviews) </span>
                     </div>
                     <div style="display: flex; align-items: center;opacity: 0.4;">
                         <span>Show all reviews</span>
@@ -141,8 +141,9 @@
                             <img src="../images/Rating 301.png" alt="">
                         </div>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
-                        consequatur!Accusamus, voluptate consequatur!</p>
+                    <p>Nulla laboris fugiat fugiat minim minim excepteur eiusmod quis. Laborum est
+                        minim id cillum nostrud cillum consectetur.
+                       </p>
                 </div>
                 <div class="user-cmts">
                     <div class="user">
@@ -154,8 +155,9 @@
                             <img src="../images/Rating 318.png" alt="">
                         </div>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
-                        consequatur!Accusamus, voluptate consequatur!</p>
+                    <p>Proident ullamco minim quis aliquip eiusmod in deserunt sit aliqua. Adipisicing
+                        reprehenderit elit officia occaecat dolor.
+                        </p>
                 </div>
                 <div class="user-cmts">
                     <div class="user">
@@ -167,8 +169,9 @@
                             <img src="../images/Rating 317.png" alt="">
                         </div>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
-                        consequatur!Accusamus, voluptate consequatur!</p>
+                    <p>Ut commodo quis sit in consequat sit nisi dolor adipisicing officia tempor do duis
+                        consequat dolore dolore ipsum.
+                        </p>
                 </div>
                 <div class="user-cmts">
                     <div class="user">
@@ -180,8 +183,9 @@
                             <img src="../images/Rating 299.png" alt="">
                         </div>
                     </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptate
-                        consequatur!Accusamus, voluptate consequatur!</p>
+                    <p>Ad laborum dolor cupidatat culpa mollit non non sunt qui. In ut et aute mollit
+                        eiusmod occaecat eiusmod mi.
+                       </p>
                 </div>
 
                 <hr style="margin: 30px 0; opacity: 0.2;">
@@ -218,8 +222,8 @@
                             </div>
                             <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
                             <div style="display: flex; justify-content: space-between; align-items: center;">
-                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
-                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                                <img src="../images/Rating 299.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">765 items sold</span>
                             </div>
                         </div>
                     </div>
@@ -232,8 +236,8 @@
                             </div>
                             <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
                             <div style="display: flex; justify-content: space-between; align-items: center;">
-                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
-                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                                <img src="../images/Rating 317.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">360 items sold</span>
                             </div>
                         </div>
                     </div>
@@ -246,8 +250,8 @@
                             </div>
                             <h5 style="color: rgb(4, 191, 191); font-size: 14px; margin-top: 5px;">$230</h5>
                             <div style="display: flex; justify-content: space-between; align-items: center;">
-                                <img src="../images/Rating 300.png" alt="" style="margin-top: 10px; width: 65px;">
-                                <span style="font-size: 10px; opacity: 0.4;">1000 items sold</span>
+                                <img src="../images/Rating 318.png" alt="" style="margin-top: 10px; width: 65px;">
+                                <span style="font-size: 10px; opacity: 0.4;">234 items sold</span>
                             </div>
                         </div>
                     </div>
@@ -258,7 +262,11 @@
         <div class="footer">
             <img src="../images/logo.png" alt="Logo">
             <h2>Subscribe to our newletter</h2>
-            <div class="email"></div>
+            <div class="email">
+                <i class="fa-regular fa-envelope"></i>
+                <input type="text" placeholder="Input your email">
+                <button>Subscribe</button>
+            </div>
             <div class="info">
                 <div>
                     <h3>Product</h3>
